--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shaarif Sajid"
-  avatar           : "shaarif.jpg"
+  avatar           : "shaarif.jpeg"
   bio              : "MSCS Student, School of Computer Science, Georgia Tech"
   location         : "Atlanta, Georgia"
   employer         :
