--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Shaarif Sajid"
 title_separator          : "-"
 name                     : &name "Shaarif Sajid"
-description              : &description "MS Computer Science Student at Georgia Tech"
+description              : &description "MS Computer Science Graduate from Georgia Tech"
 url                      : https://shaarifsajid.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ShaarifSajid/ShaarifSajid.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shaarif Sajid"
   avatar           : "shaarif.jpeg"
-  bio              : "MS CS Student, School of Computer Science, Georgia Tech"
+  bio              : "MS CS, School of Computer Science, Georgia Tech"
   location         : "Atlanta, Georgia"
   employer         :
   pubmed           : 
