--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shaarif Sajid"
   avatar           : "shaarif.jpeg"
-  bio              : "SWE @ Corpay.|Passionate about sports (soccer + tennis), |science (physics + biology), |literature (non-fiction)."
+  bio              : "SWE @ Corpay. Passionate about sports (soccer + tennis), science (physics + biology), literature (non-fiction)."
   location         : "Atlanta, Georgia"
   employer         :
   pubmed           : 
